# bevy_jam_template

./: .gitignore  Cargo.toml  Cargo.toml.template  README.md  README.md.template  build.sh  build.sh.template  cargo-generate.toml  clippy.toml  create.sh  post-generate.rhai  rustfmt.toml
.cargo/: config.toml
.github/workflows/: ci.yaml  ci.yaml.template  release.yaml  release.yaml.template
assets/: config.ron  default.config.ron  main.config.ron
assets/config/: .dev.ron  audio.ron  camera.ron  debug.ron  theme.ron  window.ron  window.ron.template
src/: animation.rs  camera.rs  common.rs  config.rs  core.rs  debug.rs  game.rs  lib.rs  main.rs  menu.rs  prelude.rs  screen.rs  sequence.rs  state.rs  theme.rs  ui.rs  util.rs  window.rs
src/animation/: backup.rs  mod.rs  offset.rs  transition.rs
src/common/: camera.rs  config.rs  debug.rs  theme.rs  window.rs
src/core/: asset.rs  audio.rs  camera.rs  config.rs  debug.rs  dev.rs  mod.rs  pause.rs  physics.rs  state.rs  theme.rs  window.rs  window.rs.template
src/core/debug/: ambiguity.rs  diagnostics.rs  editor.rs  physics.rs  picking.rs  state.rs  ui.rs
src/core/dev/: ambiguity.rs  diagnostics.rs  editor.rs  hot_patch.rs  mod.rs  physics.rs  picking.rs  state.rs  ui.rs
src/menu/: intro.rs  loading.rs  main.rs  main.rs.template  mod.rs  pause.rs  settings.rs
src/screen/: boot.rs  end.rs  fade.rs  gameplay.rs  intro.rs  loading.rs  mod.rs  playing.rs  settings.rs  splash.rs  splash.rs.template  title.rs  title.rs.template
src/screen/playing/: pause.rs  pause_menu.rs
src/sequence/: boot.rs  end_screen.rs  game.rs  loading_screen.rs  splash_screen.rs  title_screen.rs
src/state/: boot.rs  end_screen.rs  game.rs  loading_screen.rs  splash_screen.rs  title_screen.rs
src/theme/: color.rs  grid.rs  interaction.rs  layout.rs  mod.rs  text.rs  tooltip.rs  widget.rs
src/ui/: font.rs  interaction.rs  interaction_palette.rs  text.rs  tooltip.rs  transition.rs  widget.rs
src/util/: animation.rs  config.rs  configure.rs  despawn.rs  late_commands.rs  macros.rs  mod.rs  old.rs  patch.rs  previous.rs  selection.rs  time.rs  ui.rs
src/util/animation/: transition.rs
src/util/extend/: app.rs  mod.rs  node.rs  plugin_group_builder.rs  rotation.rs  trigger.rs  val.rs
src/util/patch/: mod.rs  plugin.rs  run_system_cached.rs  spawn.rs  transform.rs  trigger.rs  val.rs
src/util/ui/: font.rs  interaction.rs  tooltip.rs
web/: index.html  style.css
