[package]
name = "bevy_jam_template"
version = "0.1.0"
edition = "2021"
default-run = "run"

[dependencies]
avian2d = { version = "0.1", default-features = false, features = [
    "2d",
    "f32",
    "parry-f32",
] }
bevy = { version = "0.14", default-features = false, features = [
    # Core functionality
    "bevy_asset",
    "bevy_color",
    "bevy_render",
    "bevy_winit",
    "bevy_core_pipeline",
    "bevy_sprite",
    "bevy_text",
    "bevy_ui",
    "multi_threaded",
    "x11",
    "webgl2",

    # Extra functionality
    #bevy_gilrs",
    #serialize",
    "subpixel_glyph_atlas",
    #"bevy/tonemapping_luts",

    # File formats
    "png",
] }
bevy_asset_loader = { version = "0.21", features = ["2d", "progress_tracking"] }
bevy_common_assets = { version = "0.11", features = ["ron"] }
#bevy_editor_pls = { version = "0.9", optional = true }
bevy_kira_audio = "0.20"
bevy_mod_debugdump = { version = "0.11", optional = true }
bevy_mod_picking = { version = "0.20", default-features = false, features = [
    "backend_bevy_ui",
] }
bevy_state = "0.14"
iyes_progress = "0.12"
lazy-regex = { version = "3", features = ["lite"] }
leafwing-input-manager = "0.14"
#noise = "0.8"
pyri_state = "0.2"
#rand = { version = "0.8", features = ["small_rng"] }
ron = "0.8"
serde = "1"
strum = { version = "0.26", features = ["derive"] }
tap = "1"

[patch.crates-io]
# TODO: Workaround for https://github.com/NiklasEi/bevy_asset_loader/issues/219.
bevy_asset_loader = { git = "https://github.com/benfrankel/bevy_asset_loader.git", branch = "direct-depend" }

[features]
default = ["native_dev"]
dev = [
    #"dep:bevy_editor_pls",
    "avian2d/debug-plugin",
    "bevy/dynamic_linking",
    "bevy/sysinfo_plugin",
    "bevy_mod_picking/debug",
]
native = ["avian2d/parallel"]
native_dev = ["native", "dev", "bevy/file_watcher", "bevy/embedded_watcher"]
web = []
web_dev = ["web", "dev"]
trace = ["bevy/trace", "bevy/wgpu_trace", "bevy/trace_tracy"]
debug_dump = ["dep:bevy_mod_debugdump"]

# Enable a small amount of optimization in debug mode.
[profile.dev]
opt-level = 1

# Enable a large amount of optimization in debug mode for dependencies.
[profile.dev.package."*"]
opt-level = 3

# Enable additional optimization in release mode at the cost of compile time.
[profile.release]
lto = "thin"
codegen-units = 1

# Optimize for size in wasm-release mode.
[profile.wasm-release]
inherits = "release"
opt-level = "z"
strip = "debuginfo"

[[bin]]
name = "debug"
required-features = ["debug_dump"]
