[package]
name = "pyri_new_jam"
version = "0.1.0"
edition = "2024"
# TODO: Workaround for <https://github.com/DioxusLabs/dioxus/issues/4160>.
#default-run = "run"


[dependencies]
avian2d = { version = "0.3", default-features = false, features = [
    "2d",
    "f32",
    "parry-f32",
] }
bevy = { version = "0.16", default-features = false, features = [
    # Core features
    "bevy_audio",
    "bevy_winit",
    "bevy_ui",
    "bevy_ui_picking_backend",

    # Extra features
    "async_executor",
    #"custom_cursor",
    #"default_font",
    "multi_threaded",
    "tonemapping_luts",

    # Platform features
    "wayland",
    "webgl2",
    "x11",

    # File formats
    "png",
    "vorbis",
] }
bevy_asset_loader = { version = "0.23", features = ["2d", "progress_tracking"] }
bevy_common_assets = { version = "0.13", default-features = false, features = [
    "ron",
] }
bevy_editor_pls = { version = "0.11", features = [
    "highlight_changes",
], optional = true }
bevy_mod_debugdump = { version = "0.13", optional = true }
bevy_simple_prefs = "0.5"
bevy_simple_subsecond_system = { version = "0.1", optional = true }
bevy_state = { version = "0.16", default-features = false }
dirs = { version = "6", optional = true }
# TODO: Workaround for <https://github.com/rust-random/getrandom/issues/671>.
getrandom = { version = "0.3", default-features = false, features = [
    "wasm_js",
], optional = true }
iyes_progress = "0.14"
lazy-regex = { version = "3", default-features = false, features = ["lite"] }
leafwing-input-manager = { version = "0.17", default-features = false, features = [
    "mouse",
    "keyboard",
    "gamepad",
] }
# Compile low-severity logs out of native builds for performance.
log = { version = "0.4", features = [
    "max_level_debug",
    "release_max_level_warn",
] }
pyri_state = { version = "0.4", default-features = false, features = [
    "bevy_app",
    "bevy_reflect",
    "bevy_state",
    "react",
    "stack",
] }
pyri_tooltip = "0.3"
rand = "0.8"
ron = "0.10"
serde = "1"
tiny_bail = "0.4"
# Compile low-severity logs out of web builds for performance.
tracing = { version = "0.1", features = [
    "max_level_debug",
    "release_max_level_warn",
] }
variadics_please = "1"

[patch.crates-io]
# TODO: Workaround for <https://github.com/NiklasEi/bevy_asset_loader/issues/219>.
bevy_asset_loader = { git = "https://github.com/benfrankel/bevy_asset_loader.git", branch = "direct-depend" }
bevy_editor_pls = { git = "https://github.com/benfrankel/bevy_editor_pls.git", branch = "bevy-0-16" }
dioxus-devtools = { git = "https://github.com/DioxusLabs/dioxus.git", branch = "main" }


[features]
dev = [
    "dep:bevy_editor_pls",
    "avian2d/debug-plugin",
    "avian2d/diagnostic_ui",
    "bevy/bevy_dev_tools",
    #"bevy/bevy_remote",
    "bevy/bevy_ui_debug",
    #"bevy/configurable_error_handler",
    "bevy/default_font",
    "bevy/dynamic_linking",
    "bevy/glam_assert",
    "bevy/sysinfo_plugin",
    "bevy/track_location",
    "pyri_state/debug",
]
native = ["dep:dirs", "avian2d/parallel"]
native_dev = [
    "native",
    "dev",
    "dep:bevy_simple_subsecond_system",
    "bevy/file_watcher",
    #"bevy/embedded_watcher",
]
web = ["dep:getrandom"]
web_dev = ["web", "dev"]
bevy_mod_debugdump = ["dep:bevy_mod_debugdump"]
trace = ["bevy/trace", "bevy/trace_tracy"]

[package.metadata.bevy_cli.native]
features = ["native"]

[package.metadata.bevy_cli.native.dev]
features = ["native_dev"]

[package.metadata.bevy_cli.web]
features = ["web"]

[package.metadata.bevy_cli.web.dev]
features = ["web_dev"]


[lints.rust]
# Mark `bevy_lint` as a valid `cfg` for when `bevy_lint` runs.
unexpected_cfgs = { level = "warn", check-cfg = ["cfg(bevy_lint)"] }

[lints.clippy]
# Bevy supplies arguments to systems via dependency injection, so it's natural for systems to
# request more than 7 arguments, which would undesirably trigger this lint.
too_many_arguments = "allow"
# Queries may access many components, which would undesirably trigger this lint.
type_complexity = "allow"
# Make sure macros use their standard braces, such as `[]` for `bevy_ecs::children!`.
nonstandard_macro_braces = "warn"

# See more Bevy lints here: <https://thebevyflock.github.io/bevy_cli/bevy_lint/lints>.
[package.metadata.bevy_lint]
restriction = "warn"
pedantic = "warn"


# Compile with Performance Optimizations:
# <https://bevyengine.org/learn/quick-start/getting-started/setup/#compile-with-performance-optimizations>

# Enable a small amount of optimization in the dev profile.
[profile.dev]
opt-level = 1

# Enable a large amount of optimization in the dev profile for dependencies.
[profile.dev.package."*"]
opt-level = 3

# Remove expensive debug assertions due to <https://github.com/bevyengine/bevy/issues/14291>.
[profile.dev.package.wgpu-types]
debug-assertions = false

# Enable more optimization in the release profile at the cost of compile time.
[profile.release]
# Compile the entire crate as a single unit.
# Increases build time for large crates; marginal improvements to performance and size.
codegen-units = 1
# Do a second optimization pass over the entire program, including dependencies.
# Increases build time immensely; minimal improvements to performance and size.
#lto = "fat"

# This profile will be used by `bevy run web` automatically.
[profile.web-release]
# Default to release profile values.
inherits = "release"
# Optimize with size in mind.
# Reduces performance slightly; significant improvements to build time and size.
#opt-level = "s"


# TODO: Workaround for <https://github.com/DioxusLabs/dioxus/issues/4160>.
#[[bin]]
#name = "debug"
#required-features = ["bevy_mod_debugdump"]
